--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,12 +24,12 @@
         {{navLink.title}}
       </a>
     </mat-nav-list>
-    <div style="padding: 16px" >
-      <p class="white-text">View our 
+    <div style="padding: 16px; position: absolute; bottom: 0;" class="white-text">
+      <div>View our 
         <a routerLink='/privacy'>Privacy Policy</a> 
         and our 
         <a routerLink='/terms'>Terms and Conditions.</a> 
-      </p>
+      </div>
     </div>
   </mat-drawer>
   <!-- Top nav -->
