--- a/src/app/mailing-list/mailing-list.component.html
+++ b/src/app/mailing-list/mailing-list.component.html
@@ -43,4 +43,7 @@
         </form>
     </mat-card-content>
   </mat-card>
+  <div ng-show="!formErrorMessage">
+    You have successfully subscribed to mailing list.
+  </div> 
 </div>
