Upgrade user service

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,9 +55,8 @@ body {
 // Simple form styles
 .simple-form-aligner {
   display: flex;
-  align-items: center;
   justify-content: center;
-  height: 100%;
+  padding-top: 26px;
 }
 
 .simple-form-card {
