Close sidebar after opeing privacy/t&c

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,9 +26,9 @@
     </mat-nav-list>
     <div style="padding: 16px; position: absolute; bottom: 0;" class="white-text">
       <div>View our 
-        <a routerLink='/privacy'>Privacy Policy</a> 
+        <a routerLink='/privacy' (click)="hideSideNavAfterClick()">Privacy Policy</a> 
         and our 
-        <a routerLink='/terms'>Terms and Conditions.</a> 
+        <a routerLink='/terms' (click)="hideSideNavAfterClick()">Terms and Conditions.</a> 
       </div>
     </div>
   </mat-drawer>
