--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,13 +4,13 @@
       <div class="col-md-6">
         <h2>{{siteName}}</h2>
         <p>Make sure to follow us!</p>
-        <a [href]="social.facebook" title="Facebook" class="fa fa-facebook fa-button"></a>
-        <a [href]="social.twitter" title="Twitter" class="fa fa-twitter fa-button"></a>
-        <a [href]="social.linkedin" title="LinkedIn" class="fa fa-linkedin fa-button"></a>
-        <a [href]="social.medium" title="Medium" class="fa fa-medium fa-button"></a>
-        <a [href]="social.telegram" title="Telegram" class="fa fa-telegram fa-button"></a>
-        <a [href]="social.youtube" title="YouTube" class="fa fa-youtube fa-button"></a>
-        <a [href]="social.reddit" title="Reddit" class="fa fa-reddit fa-button"></a>
+        <a *ngIf="social.facebook" [href]="social.facebook" title="Facebook" class="fa fa-facebook fa-button"></a>
+        <a *ngIf="social.twitter" [href]="social.twitter" title="Twitter" class="fa fa-twitter fa-button"></a>
+        <a *ngIf="social.linkedin" [href]="social.linkedin" title="LinkedIn" class="fa fa-linkedin fa-button"></a>
+        <a *ngIf="social.medium" [href]="social.medium" title="Medium" class="fa fa-medium fa-button"></a>
+        <a *ngIf="social.telegram" [href]="social.telegram" title="Telegram" class="fa fa-telegram fa-button"></a>
+        <a *ngIf="social.youtube" [href]="social.youtube" title="YouTube" class="fa fa-youtube fa-button"></a>
+        <a *ngIf="social.reddit" [href]="social.reddit" title="Reddit" class="fa fa-reddit fa-button"></a>
       </div>
       <div class="col-md-6 panel-right">
         <div>
