--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -4,9 +4,9 @@
       <mat-card-header>
         <mat-card-title>A title within the header </mat-card-title>
         <mat-card-subtitle>A subtitle within the header </mat-card-subtitle>
-        <img mat-card-avatar src="/assets/img/landscape-pexels.jpg">
+        <img mat-card-avatar src="/assets/img/profile-demo.jpg">
       </mat-card-header>
-      <img src="/assets/img/landscape-pexels.jpg" mat-card-image>
+      <img src="/assets/img/card-demo.jpg" mat-card-image>
       <mat-card-title>Card title </mat-card-title>
       <mat-card-subtitle>Card subtitle</mat-card-subtitle>
       <mat-card-content>Primary card content. Intended for blocks of text</mat-card-content>
