--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,10 +1,12 @@
-<div layout="row">
-  <div layout="column" flex>
-    <div id="intro-top" class="panel" style="background-image: url('/assets/img/landscape-pexels.jpg')">
-      <img class="main-logo" src="/assets/img/logo-square-white.png">
-      <h1>
-        The best introduction on the internet!
-      </h1>
+<div id="intro-top" class="panel" style="background-image: url('/assets/img/intro-background.jpg')">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <img class="main-logo" src="/assets/img/logo-square-white.png">
+        <h1>
+          The best introduction on the internet!
+        </h1>
+      </div>
     </div>
   </div>
 </div>
