Cleaned mailing list and profile component

--- a/src/app/mailing-list/mailing-list.component.html
+++ b/src/app/mailing-list/mailing-list.component.html
@@ -7,21 +7,15 @@
       </mat-card-subtitle>
       <mat-card-content>
         <div class="form-group">
-          <mat-form-field appearance ="outline"  class="simple-form-field-50">
-            <mat-label>Given Name</mat-label>
+          <mat-form-field class="simple-form-field-50">
             <input matInput placeholder="Given name" name="givenName" formControlName="givenName">
-            <mat-icon style="font-size:16px;" matSuffix>create</mat-icon>
           </mat-form-field>
-          <mat-form-field appearance ="outline" class="simple-form-field-50">
-            <mat-label>Family Name</mat-label>
+          <mat-form-field class="simple-form-field-50">
             <input matInput placeholder="Family name" name="familyName" formControlName="familyName">
-            <mat-icon style="font-size:16px;" matSuffix>create</mat-icon>
           </mat-form-field>
           <br>
-          <mat-form-field appearance ="outline">
-            <mat-label>Username</mat-label>
-            <input matInput placeholder="Username" name="username" formControlName="username">
-            <mat-icon style="font-size:16px;" matSuffix>create</mat-icon>
+          <mat-form-field>
+            <input matInput placeholder="Email" name="email" formControlName="email">
           </mat-form-field>
           <br>
           <button
