--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,6 +107,10 @@ button.simple-form-button-change {
 .simple-form-field-50 {
   width: 49%;
 }
+.simple-form-field-50-profile {
+  width: 49%;
+  margin-left: 7px;
+}
 
 .simple-form-spinner {
   display:unset !important;
