--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,29 +1,77 @@
-<div class="simple-form-aligner">
+<div *ngIf="!submitSuccess" class="simple-form-aligner">
   <mat-card class="simple-form-card">
-      <mat-card-title style="text-align:center;">Profile</mat-card-title>
     <form [formGroup]="form" (ngSubmit)="submit(form.value)">
+      <mat-card-title style="text-align:center;"> Profile </mat-card-title>
       <mat-card-content>
         <div class="form-group">
           <mat-form-field class="simple-form-field-50">
             <input matInput placeholder="Given name" name="givenName" formControlName="givenName">
-            <mat-icon style="font-size:16px; margin-right: 30px;" matSuffix>create</mat-icon>
           </mat-form-field>
           <mat-form-field class="simple-form-field-50">
             <input matInput placeholder="Family name" name="familyName" formControlName="familyName">
-            <mat-icon style="font-size:16px;" matSuffix>create</mat-icon>
           </mat-form-field>
           <br>
           <mat-form-field>
-            <input matInput placeholder="Username" name="username" formControlName="username">
-            <mat-icon style="font-size:16px;" matSuffix>create</mat-icon>
+            <input matInput placeholder="Email" name="email" formControlName="email">
           </mat-form-field>
-          <mat-form-field>
-              <input matInput placeholder="Email" name="email" formControlName="email">
-              <mat-icon style="font-size:16px;" matSuffix>create</mat-icon>
-            </mat-form-field>
           <br>
+          <mat-form-field>
+              <input matInput placeholder="Username" name="username" formControlName="username">
+          </mat-form-field>
+          <br>
+          <button
+              [disabled]="disableButton"
+              class="simple-form-button" 
+              color="primary" 
+              mat-raised-button 
+              type="submit" 
+              value="submit">
+            Save
+          </button>
+          <mat-progress-spinner
+              *ngIf="waiting"
+              color="primary"
+              mode="indeterminate"
+              class="simple-form-spinner"
+              [diameter]=22>
+          </mat-progress-spinner>
+          <span 
+              *ngIf='formErrorMessage' 
+              class="text-error-color">
+            {{formErrorMessage}}
+          </span>
         </div>
       </mat-card-content>
     </form>
+  </mat-card>
+</div>
+
+<div *ngIf="submitSuccess" class="simple-form-aligner">
+  <mat-card class="simple-form-card">
+    <form [formGroup]="form">
+      <mat-card-title style="text-align:center">Profile</mat-card-title>
+      <mat-card-content>
+        <div class="form-group">
+          <mat-form-field class="simple-form-field-50">
+            <input matInput placeholder="Given name" name="givenName" formControlName="givenName">
+          </mat-form-field>
+          <mat-form-field class="simple-form-field-50">
+              <input matInput placeholder="Family name" name="familyName" formControlName="familyName">
+            </mat-form-field>
+            <br>
+            <mat-form-field>
+              <input matInput placeholder="Email" name="email" formControlName="email">
+            </mat-form-field>
+            <br>
+            <mat-form-field>
+                <input matInput placeholder="Username" name="username" formControlName="username">
+            </mat-form-field>
+            <br>
+            Your Profile has been updated <a routerLink="/home">
+              Go to the home page.
+            </a>
+        </div>
+      </mat-card-content>
+    </form> 
   </mat-card>
 </div>
