Fix profile component

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -40,12 +40,8 @@
               class="text-error-color">
               {{formErrorMessage}}
           </span>
-          <br>
-          <span *ngIf="submitSuccess">
-              <br>
-              <mat-card-subtitle class="successMessage">
-                Profile has been updated sucessfully.
-              </mat-card-subtitle> 
+          <span *ngIf="submitSuccess"  class="successMessage">
+              Profile has been updated successfully.
           </span>
         </div>
       </mat-card-content>
