Add form error messages

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -17,13 +17,18 @@
           </mat-form-field>
           <mat-form-field class="simple-form-field-100">
             <input matInput placeholder="Username" name="username" formControlName="username">
+            <mat-error>Not a valid username. Use only a-z, 0-9 and "_", "." or "-".</mat-error>
           </mat-form-field>
           <mat-form-field class="simple-form-field-100">
             <input matInput placeholder="Email" name="email" formControlName="email">
+            <mat-error>Not a valid email</mat-error>
           </mat-form-field>
           <br>
           <mat-form-field class="simple-form-field-100">
             <input matInput type="password" placeholder="Password" name="password" formControlName="password">
+            <mat-error>
+              Password not hard enough! Must be at least 10 characters and hard to guess.
+            </mat-error>
           </mat-form-field>
           <br>
           <section>
