--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -11,9 +11,11 @@
         <div class="form-group">
           <mat-form-field class="simple-form-field-50">
             <input matInput placeholder="Given name" name="givenName" formControlName="givenName">
+            <mat-error>Required</mat-error>
           </mat-form-field>
           <mat-form-field class="simple-form-field-50">
             <input matInput placeholder="Family name" name="familyName" formControlName="familyName">
+            <mat-error>Required</mat-error>
           </mat-form-field>
           <mat-form-field class="simple-form-field-100">
             <input matInput placeholder="Username" name="username" formControlName="username">
