--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,6 +81,11 @@ body {
   margin-left:7px;
 }
 
+.simple-form-green-progress .mat-progress-bar-fill::after {
+  background-color: green !important;
+}
+
+
 // Admin chart styles
 .admin-chart{
   display: block;
