--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,6 +81,13 @@ body {
   margin-left:7px;
 }
 
+
+.simple-form-red-progress .mat-progress-bar-fill::after {
+  background-color: red !important;
+}
+.simple-form-yellow-progress .mat-progress-bar-fill::after {
+  background-color: yellow !important;
+}
 .simple-form-green-progress .mat-progress-bar-fill::after {
   background-color: green !important;
 }
