--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -8,7 +8,13 @@
         <div class="form-group">
           <mat-form-field class="simple-form-field-100">
             <input type="password" matInput placeholder="New password" name="password" formControlName="password">
+            <mat-error>{{passwordErrorMessage}}</mat-error>
           </mat-form-field>
+          <mat-progress-bar
+              [ngClass]="updatePasswordProgressColor(passwordGuessesLog10)"
+              mode="determinate"
+              value="{{passwordProgressBarValue.toString()}}" >
+          </mat-progress-bar>
           <br>
           <button 
               [disabled]="waiting"
