Improve reset password interface

--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -9,7 +9,13 @@
           <mat-card-content>Username: {{username}}</mat-card-content>
           <mat-form-field class="simple-form-field-100">
             <input type="password" matInput placeholder="New password" name="password" formControlName="password">
+            <mat-error>{{passwordErrorMessage}}</mat-error>
           </mat-form-field>
+          <mat-progress-bar
+              [ngClass]="updatePasswordProgressColor(passwordGuessesLog10)"
+              mode="determinate"
+              value="{{passwordProgressBarValue.toString()}}" >
+          </mat-progress-bar>
           <br>
           <button 
               [disabled]="waiting"
