--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -1,3 +1,17 @@
 .successMessage{
   color: black;
 }
+
+
+.img-class{
+  height: 120px;
+  border-radius: 50%;
+  width: 37%;
+
+  img{
+    height: 120px;
+    border-radius: 50%;
+    width:100%
+  }
+}
+
