--- a/src/app/image-upload/image-upload.component.html
+++ b/src/app/image-upload/image-upload.component.html
@@ -1,15 +1,28 @@
-<label class='image-upload-container btn btn-bwm'>
-  <span>Select Image</span>
-  <input  #imageInput 
-          type='file'
+<label *ngIf="!imageChangedEvent">
+  <span>
+    <mat-icon style="cursor:pointer;" matSuffix>add_a_photo</mat-icon>
+  </span>
+  <input  type='file'
           accept='image/*'
-          (change)='processFile(imageInput)'>
+          (change)='processFile($event)'>
 </label>
-<div *ngIf="selectedFile" class='img-preview-conatiner'>
-  <!-- <div class='img-preview'
-       [ngStyle] = "{'background-image': 'url(' + selectedFile.src + ')'}">
-  </div> -->
 
-  <div *ngIf="selectedFile.status === 'OK'" class='alert alert-success'> Image Uploaded Sucessfully</div>
-  <div *ngIf="selectedFile.status === 'FAIL'" class='alert alert-danger'> Image Upload Failed</div>
-</div>
+<label *ngIf="imageChangedEvent" (click)= "uploadImage()" style="background-color:royalblue" class= "btn btn-primary btn-sm">
+  <span><mat-icon matSuffix>done</mat-icon></span>
+</label>
+
+<image-cropper
+    [imageChangedEvent]="imageChangedEvent"
+    [maintainAspectRatio]="true"
+    [aspectRatio]="4 / 3"
+    format="jpeg"
+    (imageCroppedFile)="imageCropped($event)"
+></image-cropper>
+
+<div *ngIf="selectedFile && imageChangedEvent">
+  <div class='img-preview'
+       [ngStyle] = "{'background-image': 'url(' + selectedFile.src + ')'}">
+  </div>
+</div> 
+
+ 
