--- a/src/app/image-upload/image-upload.component.scss
+++ b/src/app/image-upload/image-upload.component.scss
@@ -14,20 +14,7 @@ input {
   }
 }
 
-.image-loading-overlay {
-  background-color: black;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top: 0;
-  opacity: .2;
-  position: absolute;
-}
-
 .btn-bwm {
-  background-color: red;
-  border-color: red;
-  color: white;
-  padding: 15px 30px;
-  font-size: 20px;
+  background-color: royalblue;
+  border-color: royalblue;
 }
