--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,15 +1,15 @@
 <div class="simple-form-aligner">
   <mat-card class="simple-form-card">
     <form [formGroup]="form" (ngSubmit)="submit(form.value)">
-      <mat-card-title style="text-align:center;"> Profile </mat-card-title>
+      <mat-card-title> Profile </mat-card-title>
       <mat-card-content>
         <div>
+            <div >
+              <img mat-card-lg-image class="img-class" [src]="profileImage" alt=''>
+            </div>
             <app-image-upload (imageUploaded)="handleImageUpload($event)"
                               (imageError)="handleImageError()">
             </app-image-upload>  
-            <div class="img-class">
-              <img [src]="profileImage" alt=''>
-            </div>
         </div>
         <div class="form-group">
           <mat-form-field class="simple-form-field-50">
