Minor update - Profile component

--- a/src/app/image-upload/image-upload.component.html
+++ b/src/app/image-upload/image-upload.component.html
@@ -1,14 +1,10 @@
 <label *ngIf="!imageChangedEvent">
   <span>
-    <mat-icon style="cursor:pointer;" matSuffix>add_a_photo</mat-icon>
+    <mat-icon class="icon" matSuffix>add_a_photo</mat-icon>
   </span>
   <input  type='file'
           accept='image/*'
           (change)='processFile($event)'>
-</label>
-
-<label *ngIf="imageChangedEvent" (click)= "uploadImage()" style="background-color:royalblue" class= "btn btn-primary btn-sm">
-  <span><mat-icon matSuffix>done</mat-icon></span>
 </label>
 
 <image-cropper
@@ -16,8 +12,8 @@
     [maintainAspectRatio]="true"
     [aspectRatio]="1 / 1"
     format="jpeg"
-    (imageCroppedFile)="imageCropped($event)"
-></image-cropper>
+    (imageCroppedFile)="imageCropped($event)">
+</image-cropper>
 
 <div *ngIf="selectedFile && imageChangedEvent">
   <div class='img-preview'
@@ -25,4 +21,17 @@
   </div>
 </div> 
 
- 
+<label *ngIf="imageChangedEvent"  
+(click)= "uploadImage()" 
+style="background-color:royalblue; float: right;" 
+class= "btn btn-primary btn-sm">
+  <span>
+  <mat-icon matSuffix>done</mat-icon>
+  </span>
+</label>
+
+<label *ngIf="imageChangedEvent"
+ (click)='cancelCropping()'
+ class="btn btn-primary btn-md"
+ style="background-color:transparent; border-color: transparent; color: red; float: right;">Cancel
+</label>
