--- a/src/app/image-upload/image-upload.component.scss
+++ b/src/app/image-upload/image-upload.component.scss
@@ -14,7 +14,7 @@ input {
   }
 }
 
-.btn-bwm {
-  background-color: royalblue;
-  border-color: royalblue;
+.icon{
+  cursor:pointer;
+  margin-left: 100px;
 }
