--- a/src/app/user-dropdown/user-dropdown.component.html
+++ b/src/app/user-dropdown/user-dropdown.component.html
@@ -4,7 +4,10 @@
 </button>
 <button *ngIf="isLoggedIn" mat-button [matMenuTriggerFor]="userDropdownMenu"
     style="min-width:50px">
-  <mat-icon>person</mat-icon>{{user?.givenName}} {{user?.familyName[0]}} 
+  <span>
+    <img mat-card-sm-image class='thumbNail' [src]="user.profileImage" alt=''>
+  </span>
+  {{user?.givenName}} {{user?.familyName[0]}} 
 </button>
 
 <mat-menu #userDropdownMenu="matMenu" overlapTrigger=false>
