--- a/src/app/image-upload/image-upload.component.html
+++ b/src/app/image-upload/image-upload.component.html
@@ -1,4 +1,4 @@
-<label *ngIf="!imageChangedEvent">
+<label>
   <span>
     <mat-icon class='icon'>add_a_photo</mat-icon>
   </span>
@@ -7,12 +7,12 @@
          (change)='processFile($event, imageCropper)'>
 </label>
 
-<ng-template #imageCropper let-c="close" let-d="dismiss">
-  <div class='modal-header'>
-    <h5>Set Thumbnail</h5>
+<ng-template #imageCropper>
+  <div>
+    <h5 mat-dialog-title>Set Thumbnail</h5>
   </div>
-  <div class="modal-body" style="padding: 0px;">
-    <image-cropper style="width: 600px; max-width: calc(90vw - 80px);" 
+  <mat-dialog-content>
+    <image-cropper class=dialogStyle 
         [imageChangedEvent]="imageChangedEvent"
         [maintainAspectRatio]="true"
         [aspectRatio]="1 / 1"
@@ -24,21 +24,22 @@
       <div [ngStyle] = "{'background-image': 'url(' + selectedFile.src + ')'}">
       </div>
     </div>
-  </div>
-    <div class='modal-footer'>
-      <button *ngIf="imageChangedEvent"
-      (click)='cancelCropping()'
-      mat-raised-button
-      color='warn'>Cancel
+  </mat-dialog-content>
+  <mat-dialog-actions align='end'>
+    <button *ngIf="imageChangedEvent"
+            (click)='cancelCropping()'
+            mat-raised-button
+            color='warn'>Cancel
     </button>
 
-      <button *ngIf="imageChangedEvent"
-      (click)= "uploadImage()"
-      mat-raised-button
-      color='primary'>
-        <span class='okButton'>
+    <button *ngIf="imageChangedEvent"
+            (click)= "uploadImage()"
+            mat-raised-button
+            cdkFocusInitial
+            color='primary'>
+      <span class='okButton'>
         <mat-icon matSuffix>done</mat-icon>
-        </span>
-      </button>
-    </div>
+      </span>
+    </button>
+  </mat-dialog-actions>
 </ng-template>
