Code review update - dialog box

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,8 +95,8 @@ body {
 // Global modal style
 .custom-modalbox {
   mat-dialog-container {
-      padding: 0;
-      max-width: 95vw;
+      padding: 4px 6px 20px;
+      max-width: 90vw;
   }
 }
 
