--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,14 +3,12 @@
     <form [formGroup]="form" (ngSubmit)="submit(form.value)">
       <mat-card-title> Profile </mat-card-title>
       <mat-card-content>
-        <div>
-            <div class="image-upload">
-              <img mat-card-lg-image class="img-class" [src]="profileImage" alt=''>
-            </div>
-            <app-image-upload
-                              (imageUploaded)="handleImageUpload($event)"
-                              (imageError)="handleImageError()">
-            </app-image-upload>  
+        <div class='image-upload'>
+          <img mat-card-lg-image class="img-class" [src]="profileImage" alt='Profile Photo'>
+          <app-image-upload
+                            (imageUploaded)="handleImageUpload($event)"
+                            (imageError)="handleImageError()">
+          </app-image-upload>  
         </div>
         <div class="form-group">
           <mat-form-field class="simple-form-field-50">
