--- a/src/app/image-upload/image-upload.component.html
+++ b/src/app/image-upload/image-upload.component.html
@@ -1,11 +1,11 @@
-<label>
+<span>
   <span>
     <mat-icon class='icon'>add_a_photo</mat-icon>
   </span>
   <input type='file'
          accept='image/*'
          (change)='processFile($event, imageCropper)'>
-</label>
+</span>
 
 <ng-template #imageCropper>
   <h5 mat-dialog-title>Set Thumbnail</h5>
