--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,7 +4,8 @@
       <mat-card-title> Profile </mat-card-title>
       <mat-card-content>
         <div class='image-upload'>
-          <img mat-card-lg-image class="img-class" [src]="profileImage" alt='Profile Photo'>
+          <img mat-card-lg-image *ngIf='user.profileImage'class="img-class" [src]="profileImage" alt='Profile Photo'>
+          <img mat-card-lg-image *ngIf='!user.profileImage' class="img-class" src='assets/img/default-profile-photo.png'>
           <app-image-upload
                             (imageUploaded)="handleImageUpload($event)"
                             (imageError)="handleImageError()">
