--- a/src/app/view-contacts/view-contacts.component.html
+++ b/src/app/view-contacts/view-contacts.component.html
@@ -1,5 +1,23 @@
-<div class="container">
-  <h1>
-    View Contacts.
-  </h1>
+<div class="simple-form-aligner">
+  <mat-card class="simple-form-card">
+    <form [formGroup]="form" (ngSubmit)="submit(form.value)">
+      <mat-card-title style="text-align:center;"> Contact Info </mat-card-title>
+      <mat-card-content>
+        <div class="form-group">
+          <mat-form-field class="simple-form-field-50">
+            <input matInput placeholder="Given name" name="givenName" formControlName="givenName">
+          </mat-form-field>
+          <mat-form-field class="simple-form-field-50">
+            <input matInput placeholder="Family name" name="familyName" formControlName="familyName">
+          </mat-form-field>
+          <br>
+          <mat-form-field>
+            <input matInput placeholder="Email" name="email" formControlName="email">
+          </mat-form-field>
+          <br>
+          </div>
+      </mat-card-content>
+    </form>
+  </mat-card>
 </div>
+
